# android-connector

./: .gitignore  .jitpack.yml  Doc.md  README.md  build.gradle  gradle.properties  settings.gradle
.github/workflows/: main.yml
.woodpecker/: main.yml
connector/: Module.md  build.gradle
connector/src/main/: AndroidManifest.xml
connector/src/main/java/com/google/crypto/tink/apps/webpush/: BUILD.bazel  WebPushConstants.java  WebPushHybridDecrypt.java  WebPushHybridEncrypt.java
connector/src/main/java/org/unifiedpush/android/connector/: Constants.kt  DialogContent.kt  FailedReason.kt  LinkActivity.kt  LinkActivityHelper.kt  MessagingReceiver.kt  MessagingReceiverImpl.kt  PushReceiver.kt  PushService.kt  RaiseToForegroundService.kt  Registration.kt  RegistrationDialogContent.kt  RegistrationSet.kt  ServiceConnection.kt  Store.kt  UnifiedPush.kt  Utils.kt  WakeLock.kt  WebPush.kt
connector/src/main/java/org/unifiedpush/connector/: Registration.kt
connector/src/main/res/values/: strings.xml
connector_fcm_added/: build.gradle
connector_fcm_added/src/main/: AndroidManifest.xml
dokka/: README.md  tab_style.css
gradle/wrapper/: gradle-wrapper.properties
scripts/: doc.sh  publish.sh
src/main/: AndroidManifest.xml
src/main/java/org/unifiedpush/connector/: Constants.kt  MessagingReceiver.kt  MessagingServiceHandler.kt  Registration.kt  RegistrationServiceBinding.kt  Utils.kt
src/main/java/org/unifiedpush/connector/fcm/: FirebaseRedirectionService.kt
src/main/res/values/: strings.xml
(+28 files in other folders)
